<resources>
    <string name="app_name">Score Keeper</string>

    <string name="zero">0</string>
    <string name="zeroTime">00:00</string>
    <string name="zeroResults"></string>

    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="reset">Reset</string>

    <string name="buttonDns">DNS</string>
    <string name="buttonDnf">DNF</string>
    <string name="buttonDisq">DISQ</string>

    <string name="dns">Did Not Start</string>
    <string name="dnf">Did Not Finish</string>
    <string name="disq">Disqualified</string>

    <string name="boat1">Boat 1</string>
    <string name="boat2">Boat 2</string>
</resources>
